switch to message/broadcast and update docs
